[gd_scene load_steps=2 format=3 uid="uid://bsg8o2t0rsp5x"]

[ext_resource type="Script" path="res://Scripts/settings_menu.gd" id="1_v5jtv"]

[node name="Settings Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v5jtv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -161.5
offset_right = 179.0
offset_bottom = 161.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 22

[node name="Master_lb" type="Label" parent="CanvasLayer/Background/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Master Volume
"

[node name="Master" type="HSlider" parent="CanvasLayer/Background/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="Music_lb" type="Label" parent="CanvasLayer/Background/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music Volume
"

[node name="Music" type="HSlider" parent="CanvasLayer/Background/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="SFX_lb" type="Label" parent="CanvasLayer/Background/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SFX Volume"

[node name="SFX" type="HSlider" parent="CanvasLayer/Background/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="back" type="Button" parent="CanvasLayer/Background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -122.0
offset_right = 53.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Back
"

[connection signal="mouse_exited" from="CanvasLayer/Background/VBoxContainer/Master" to="." method="_on_master_mouse_exited"]
[connection signal="mouse_exited" from="CanvasLayer/Background/VBoxContainer/Music" to="." method="_on_music_mouse_exited"]
[connection signal="mouse_exited" from="CanvasLayer/Background/VBoxContainer/SFX" to="." method="_on_sfx_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Background/back" to="." method="_on_back_pressed"]
